# simplesynth

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  TODO  autogen.sh  config.h.in  configure  configure.ac
scala/: wave.scala
src/: Global.h  Makefile.am  Makefile.in  SynthGUI.cpp  SynthGUI.h  SynthGUI.moc.cpp  Voice.cpp  Voice.h  WaveTable.cpp  WaveTable.h  main.cpp
